Fix spacing on wrap of selected players

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,22 +39,26 @@ a:visited, a:active, a:focus {
 	border: 3px solid rgb(124, 181, 236);
 }
 
-.money-lineup {
-	border: 3px solid green;
-}
+/* SOLVER TOP PLAYS */
 
-.hide-lineup {
-	display: none;
+.edit-buy-in {
+	display: table;
 }
 
 .hide-player-in-filter {
 	display: none;
 }
 
-/* SOLVER TOP PLAYS */
+.remove-selected-player-link {
+	margin-right: 10px;
+}
 
-.edit-buy-in {
-	display: table;
+.money-lineup {
+	border: 3px solid green;
+}
+
+.hide-lineup {
+	display: none;
 }
 
 .edit-lineup-buy-in-hidden {
